--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -1,8 +1,8 @@
 <view class="container">
-	<view class="userinfo">
-		<image wx:if="{{userInfo && userInfo.avatarUrl}}" class="userinfo-avatar" src="{{ userInfo.avatarUrl }}" background-size="cover"></image>
-		<text class="userinfo-nickname">{{ userInfo.nickName }}</text>
-	</view>
+  <view class="userinfo">
+    <image wx:if="{{userInfo && userInfo.avatarUrl}}" class="userinfo-avatar" src="{{ userInfo.avatarUrl }}" background-size="cover"></image>
+    <text class="userinfo-nickname">{{ userInfo.nickName }}</text>
+  </view>
   <view class="asset">
     <view class='item' bindtap='goAsset'>
       <view>{{balance}}</view>
@@ -45,19 +45,19 @@
   </view>
 
   <block wx:if="{{vipLevel > 0}}">
-  <view style="height:10rpx;background: #eee;width:100%;"></view>
-  <view class="my-item" wx:if="{{!apiUserInfoMap.base.isSeller}}">
-    <navigator url="/pages/fx/apply-status" hover-class="navigator-hover">成为分销商</navigator>
-  </view>
-  <view class="my-item" wx:if="{{apiUserInfoMap.base.isSeller}}">
-    <navigator url="/pages/fx/apply-status" hover-class="navigator-hover">分销中心</navigator>
-  </view>
-  <view class="my-item" wx:if="{{apiUserInfoMap.base.isSeller}}">
-    <navigator url="/pages/fx/members" hover-class="navigator-hover">我的团队</navigator>
-  </view>
-  <view class="my-item" wx:if="{{apiUserInfoMap.base.isSeller}}">
-    <navigator url="/pages/fx/commisionLog" hover-class="navigator-hover">返佣明细</navigator>
-  </view>
+    <view style="height:10rpx;background: #eee;width:100%;"></view>
+    <view class="my-item" wx:if="{{!apiUserInfoMap.base.isSeller}}">
+      <navigator url="/pages/fx/apply-status" hover-class="navigator-hover">成为分销商</navigator>
+    </view>
+    <view class="my-item" wx:if="{{apiUserInfoMap.base.isSeller}}">
+      <navigator url="/pages/fx/apply-status" hover-class="navigator-hover">分销中心</navigator>
+    </view>
+    <view class="my-item" wx:if="{{apiUserInfoMap.base.isSeller}}">
+      <navigator url="/pages/fx/members" hover-class="navigator-hover">我的团队</navigator>
+    </view>
+    <view class="my-item" wx:if="{{apiUserInfoMap.base.isSeller}}">
+      <navigator url="/pages/fx/commisionLog" hover-class="navigator-hover">返佣明细</navigator>
+    </view>
   </block>
 
   <block wx:if="{{vipLevel > 0}}">
@@ -82,7 +82,7 @@
   </view>
   <view class="my-item">
     <navigator url="/pages/score-excharge/index" hover-class="navigator-hover">积分兑换</navigator>
-  </view>  
+  </view>
   <view class="my-item">
     <navigator url="/pages/select-address/index" hover-class="navigator-hover">收货地址</navigator>
   </view>
@@ -93,18 +93,22 @@
     {{userMobile}}
   </view>
   <view style="height:20rpx;background: #eee;width:100%;"></view>
-  <view class="about" bindtap="aboutUs">
+  <!-- <view class="about" bindtap="aboutUs">
     关于我们
-  </view>
+  </view> -->
 
   <view style="height:20rpx;background: #eee;width:100%;"></view>
-  <view wx:if="{{!userMobile}}" class="bind-phone-number">
-    <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">绑定手机号码</button>
+
+  <view class='bind-phone-box'>
+    <view wx:if="{{!userMobile}}" class="bind-phone-number">
+      <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">绑定手机号码</button>
+    </view>
+    <view class="my-item to-authorize">
+      <button type="warn" bindtap="relogin">重新授权登录</button>
+    </view>
   </view>
-  <view class="my-item to-authorize">
-    <button type="warn" bindtap="relogin">重新授权登录</button>
-  </view>
-  
+
+
   <view style="height:20rpx;background: #eee;width:100%;"></view>
   <view class="version">Powered by EastWorld v {{version}}</view>
   <view style="height:20rpx;background: #eee;width:100%;"></view>
