--- a/pages/my/index.wxss
+++ b/pages/my/index.wxss
@@ -13,6 +13,7 @@
 .userinfo-avatar {
 	width: 160rpx;
 	height: 160rpx;
+  border-radius: 100%;
 }
 .userinfo-nickname {
   margin-top: 20rpx;
@@ -59,15 +60,7 @@
     font-size:14px;
 }
 
-.about{
-    width: 100%;
-    background: url(https://cdn.it120.cc/images/weappshop/arrow-right.png) no-repeat 750rpx center;
-    background-size: 16rpx auto,750rpx auto;
-    margin: 20rpx 0; 
-    height: 80rpx;
-    line-height: 80rpx;
-    padding-left: 100rpx;
-}
+
 
 .order-shortcut {
   display: flex;
@@ -101,4 +94,10 @@
 .bind-phone-number{
   margin: 20rpx;
   width: 100%;
+}
+.bind-phone-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20rpx;
 }
